--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,7 +3,7 @@ main:
   - title: "About"
     url: /about/ #https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
   - title: "Blog"
-     url: /blog/
+     url: /blogs/
   # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
   # - title: "Sample Posts"
