--- a/_config.yml
+++ b/_config.yml
@@ -114,16 +114,16 @@ author:
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-#       url: mailto:jageshmaharjan@hotmail.com
-    - label: "Website"
+      url: "mailto:jageshmaharjan@hotmail.com"
+    - label: "LinkedIn"
       icon: "fas fa-fw fa-link"
-      # url: "https://your-website.com"
+      url: "https://www.linkedin.com/in/jagesh-jugs-maharjan-4237b81b/"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-      # url: "https://twitter.com/"
+      url: "https://twitter.com/jagesh007"
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
-      # url: "https://facebook.com/"
+      url: "https://facebook.com/jageshmaharjan"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/jageshmaharjan"
