--- a/_config.yml
+++ b/_config.yml
@@ -123,7 +123,7 @@ author:
       url: "https://twitter.com/jagesh007"
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
-      url: "https://facebook.com/jageshmaharjan"
+      url: "https://www.facebook.com/jageshshaggy"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/jageshmaharjan"
