--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,7 @@ main:
    - title: "About"
      url: /about/
    - title: "Machine Learning"
-     url: /blogs/
+     url: /news/
   # - title: "Sample Collections"
   #   url: /collection-archive/
   # - title: "Sitemap"
