--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Jagesh Maharjan"
+title                    : "Jagesh Maharjan (Jugs)"
 title_separator          : "-"
 name                     : "Jagesh Maharjan"
 description              : "Software Engineer & Machine Learning Engineer"
@@ -106,7 +106,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Jagesh Maharjan"
+  name             : "Jagesh Maharjan (Jugs)"
   avatar           : "/images/profile.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "My research interst is in Machine Learning & Deep Learning, especially in Natural Language Processing (NLP) and computer vision (CV)"
   location         : "Shenzhen"
